aws/site_core_project/v11/DEV-School-Program/DEV-asg-launchtmplt.tf
resource "aws_launch_template" "lt_scp_cd_server" {
  name                   = var.lt_scp_cd_server
  description            = "Launch Template for CD Server"
  image_id               = var.ami_lt_scp_cd_server
  instance_type          = var.ec2_type_content_delivery_01
  key_name               = var.dev_key_pair
  vpc_security_group_ids = [aws_security_group.sg_content_delivery_01.id, aws_security_group.sg_pam_citrix_mgmt.id]
  iam_instance_profile {
    name = aws_iam_instance_profile.ec2_profile_role.name
  }
  ebs_optimized = "false"
  user_data     = "PHBvd2Vyc2hlbGw+CldyaXRlLU91dHB1dCAiSW5zdGFsbGluZyBSU0FULUFELVBvd2VyU2hlbGwiCkluc3RhbGwtV2luZG93c0ZlYXR1cmUgUlNBVC1BRC1Qb3dlclNoZWxsID4+IGM6XHVzZXJfZGF0YS5sb2cKYXdzIHMzIGNwICdzMzovL2V4cG8tbWdtdC9jZXJ0aWZpY2F0ZS9zY2hvb2xzLWV4cG8yMDIwLnBmeCcgQzpcY2VydGlmaWNhdGVzXCAtLXJlZ2lvbiBldS13ZXN0LTEKJGV4cG8yMDIwZHViYWlDZXJ0UGF0aCA9ICdjOlxjZXJ0aWZpY2F0ZXNcc2Nob29scy1leHBvMjAyMC5wZngnCiRjZXJ0UGFzcyA9IChHZXQtU1NNUGFyYW1ldGVyVmFsdWUgLU5hbWUgL2NlcnRpZmljYXRlL3Bhc3N3b3JkIC1XaXRoRGVjcnlwdGlvbiAkV [...]
  tag_specifications {
    resource_type = "instance"
    tags = {
      Name             = var.ec2_name_asg_content_delivery
      NAME             = var.host_asg_content_delivery
      
    }
  }
  tags = {
    Name             = var.ec2_name_asg_content_delivery
    NAME             = var.host_asg_content_delivery
  
  }
}
